...
    lazy private var loginTextField: UITextField = {
        let textField = getTextField()
        textField.placeholder = Resources.TitleView.AuthView.placeholderLogin.rawValue
        textField.delegate = self
        textField.tag = TextFieldTags.login.rawValue
        textField.returnKeyType = .next
        textField.accessibilityIdentifier = "LoginTF"
        return textField
    }()
    
    lazy private var passwordTextField: UITextField = {
        let textField = getTextField()
        textField.placeholder = Resources.TitleView.AuthView.placeholderPassword.rawValue
        textField.isSecureTextEntry = true
        textField.delegate = self
        textField.tag = TextFieldTags.password.rawValue
        textField.returnKeyType = .done
        textField.accessibilityIdentifier = "PasswordTF"
        return textField
    }()
    
    private func getLabel() -> UILabel {
        
        let label = UILabel()
...
