...
                                                  tag: TabItem.chars.rawValue)
        
        logotNavigation.tabBarItem = UITabBarItem(title: Resources.TitleView.TabBarItemTitle.logout.rawValue,
                                                   image: imageOut,
                                                   tag: TabItem.logout.rawValue )
        
        logotNavigation.tabBarItem.accessibilityIdentifier = "TabLogout"
        
        setViewControllers([
            charsNavigation,
            logotNavigation], animated: false)
        
    }
...
